# Enache_Sorin_Project

./: CMakeLists.txt  Collection.cpp  Collection.h  Display.h  ImportantCollection.cpp  ImportantCollection.h  Note.cpp  Note.h  Observer.h  Subject.h  main.cpp
Test/: CMakeLists.txt  CollectionTest.cpp  NoteTest.cpp  runAllTests.cpp
